--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semana do Zero ao Programador Contratado - Dragon Ball</title>
+    <title>Projeto - Dragon Ball</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./src/css/reset.css">
 
     <link rel="stylesheet" href="./src/css/style.css">
+
+    <link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
 
 <body>
@@ -113,6 +115,8 @@
             </button>
         </li>
     </ul>
+
+    <script src="./src/javascript/index.js"></script>
 </body>
 
 </html>
